# solyx-homeassistant-integration

./: .gitattributes  .gitignore  LICENSE  QUALITY_SCALE.md  README.md  hacs.json  pyproject.toml  requirements.txt
components/solyx_energy/: __init__.py  manifest.json
custom_components/solyx_energy/: api.py  config_flow.py  const.py  coordinator.py  entity_descriptions.py  manifest.json  number.py  quality_scale.yaml  select.py  sensor.py  strings.json  util.py
custom_components/solyx_energy/translations/: en.json  nl.json
homeassistant/components/solyx_energy/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  entity.py  entity_descriptions.py  manifest.json  number.py  select.py  sensor.py  strings.json  util.py
homeassistant/components/solyx_energy/translations/: en.json  nl.json
homeassistant/custom_components/solyx_energy/: api.py  config_flow.py  manifest.json
tests/: conftest.py
tests/components/solyx_energy/: __init__.py  conftest.py  const.py  test_api.py  test_config_flow.py  test_init.py  test_number.py  test_select.py  test_sensor.py
tests/components/solyx_energy/fixtures/: asset_data.json
