[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "solyx-homeassistant-integration"
version = "1.0.0"
description = "Solyx Energy integration for Home Assistant"
requires-python = ">=3.13"
dependencies = [
    "homeassistant==2026.6.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
